# Frost

./: .gitignore  README.md
.github/workflows/: release.yml
agent/: .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  vitest.live.config.ts
agent/scripts/: agents-read-smoke.mjs  executor-live-swap.mjs  fund-server-wallet.mjs  fund-wallet.mjs  list-oneshot-methods.mjs  prep-executor-swap.mjs  provision-session-wallet.mjs  refillable-mandate-demo.mjs  register-audit-method.mjs  setup-oneshot-executor.mjs  spike-redelegation.mjs  x402-delegation-smoke.mjs  x402-pay-inference.mjs
agent/src/: browser.ts  index.ts  types.ts
agent/test/: agents-definition.test.ts  caveat-encoder.test.ts  comms.test.ts  compile.test.ts  deployment.test.ts  designer.test.ts  discord.test.ts  dispatch.test.ts  email.test.ts  enrich.test.ts  escape.test.ts  executor-hitl.test.ts  executor.test.ts  fanout.test.ts  fixtures.ts  global-setup.ts  inference-switching.test.ts  injection-corpus.test.ts  injection-corpus.ts  monitor.test.ts  (+23 more)
frost/: .env.example  CLAUDE.md  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
frost/src-tauri/: Cargo.toml  tauri.conf.json
frost/src-tauri/capabilities/: default.json
frost/src-tauri/src/: lib.rs  permission_spec.rs  wallet_bridge.rs
sdk/: .gitignore  package-lock.json  package.json  vitest.config.ts
spikes/: .env.example
web/: package.json  playwright.config.ts
x402-inference/: .env.example  package.json  tsconfig.json
(+231 files in other folders)
