[package]
name = "frost"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# This machine is RAM-constrained (~7 GB). The frost crate emits THREE crate types
# (staticlib/cdylib/rlib), and codegen with full debug info (`debuginfo=2`) OOMs rustc.
# Dropping dev debug info roughly halves codegen memory so `tauri dev` builds reliably; the
# app still runs (only Rust-side debug symbols are lost — not needed for the demo).
[profile.dev]
debug = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
thiserror = "1"
keyring = "3"
zeroize = "1"

